--- a/index.html
+++ b/index.html
@@ -29,13 +29,16 @@
     <header>
       <ul>
         <li>
-          <a href="">woof</a>
+          <a href=" https://brandon-milam.github.io/project-woof/">woof</a>
         </li>
         <li>
-          <a href="">extinction</a>
+          <a href=" https://brandon-milam.github.io/extinction/">extinction</a>
         </li>
         <li>
-          <a href="">restaurant</a>
+          <a href=" https://brandon-milam.github.io/savagesubs/">restaurant</a>
+        </li>
+        <li>
+          <a href="file:///Users/brandonmilam/Desktop/portfolio-site/resume.html">resume</a>
         </li>
       </ul>
     </header>
