--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <a href=" https://brandon-milam.github.io/savagesubs/">restaurant</a>
         </li>
         <li>
-          <a href="file:///Users/brandonmilam/Desktop/portfolio-site/resume.html">resume</a>
+          <a href="resume.html">resume</a>
         </li>
       </ul>
     </header>
